# ai-arena

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  RAILWAY_DEPLOY_GUIDE.md  README.md  pyproject.toml  requirements.txt  run.py  start_ui.bat
.devcontainer/: Dockerfile  devcontainer.json
.streamlit/: config.toml  secrets.toml.example
ai_arena/: __init__.py  config.py
ai_arena/engine/: __init__.py  orchestrator.py  rate_limiter.py  session.py  tool_executor.py  tool_parser.py  tool_registry.py
ai_arena/models/: __init__.py  agent.py  message.py  session_state.py
ai_arena/providers/: __init__.py  anthropic_provider.py  base.py  cerebras_provider.py  openai_provider.py  openrouter_provider.py
ai_arena/tools/: __init__.py  base.py  file_tools.py
ai_arena/ui/: __init__.py  app.py  chat_panel.py  config_panel.py  context_panel.py  icons.py  tokens.py
contexts/: fe11a555.md
docs/: README.md  adding_agents.md  adding_providers.md  architecture.md  configuration.md  folder_structure.md  plan_review_fixes.md  plan_ui_ux.md  tools.md
graphify-out/: GRAPH_REPORT.md  graph.html
sys_prompts/: critic.md  optimist.md  summarizer.md  synthesizer.md
tests/: test_comprehensive.py  test_dryrun_5rounds.py  test_fixes.py  test_middleware.py  test_openrouter.py  test_providers_live.py  test_quick.py
